--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.22.4",
     "axios": "^1.7.9",
     "primeicons": "^7.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
